# older-projects-compilation

./: .gitmodules  README.md
00-pomodoro-iced/: README.md
00-pomodoro-iced/src/: colored_keys.rs  main.rs  timer.rs
00-python-game-school-project/: .gitignore  README.md  database.py
01-pomodoro-iced/: Cargo.toml  README.md
01-pomodoro-iced/src/: action_handler.rs  (+3 more)
01-python-game-school-project/: README.md  main.py  player.py
02-boshy/: .ignore  README.md  index.html  index.js  preloader.js  style.css
03-balalaika/: .gitignore  .ignore  Cargo.toml  README.md  curlie_guide  env_example
03-balalaika/docs/: entry3.txt  entry4.txt
03-balalaika/scripts/: create_db.sh  create_db.sql  create_user.sql  fast_populate.sh  fast_populate.sql
03-balalaika/scripts/populate/: .gitignore  albums.py  api.py  create_db.sql  database.py  main.py  parser.py  structures.py
03-balalaika/src/: auth.rs  doc.rs  main.rs
03-balalaika/src/api/: album.rs  artist.rs  mod.rs  search_results.rs  song.rs
03-balalaika/src/database/: album.rs  artist.rs  mod.rs  search_results.rs  song.rs  user.rs
03-balalaika/src/extractors/: auth_token.rs
04-website/: .ignore  README.md  hugo.toml  update_web.sh
05-css-2f/: README.md  audio.js  index.html  style.css  svgs.js  todo.md
06-jirafeitor/: .gitignore  README.md  rubrica.txt
06-jirafeitor/gtk-front/: Cargo.toml
06-jirafeitor/gtk-front/src/: main.rs
06-jirafeitor/gtk-front/src/components/: topbar.rs
06-jirafeitor/gtk-front/src/models/: video.rs
06-jirafeitor/gtk-front/src/scenes/: mod.rs  search_scene.rs  video_scene.rs
(+115 files in other folders)
