[package]
name = "gtk-front"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk = { version = "0.9.6", package = "gtk4" }
reqwest = { version = "0.12.15", features = ["json"] }
serde = {version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["rt", "rt-multi-thread"] }
webkit6 = "0.4.0"
